...
    [_labels addObject:@"Elapsed Time"];
    [_types addObject:@0];
    [_outputStrings addObject:@"00:00:00"];
    [_labels addObject:@"Dispatch Time"];
    [_types addObject:@1];
    [_outputStrings addObject:@""];
    [_labels addObject:@"Patient Contact Time"];
    [_types addObject:@2];
    [_outputStrings addObject:@""];
    [_labels addObject:@"Transport Time"];
    [_types addObject:@3];
    [_outputStrings addObject:@""];
    [_labels addObject:@"At Hospital"];
    [_types addObject:@4];
    [_outputStrings addObject:@""];
    [_labels addObject:@"Cleared"];
    [_types addObject:@5];
    [_outputStrings addObject:@""];
    [_labels addObject:@"In Service"];
    [_types addObject:@6];
    [_outputStrings addObject:@""];
    [_labels addObject:@"5 minute re-assess"];
    [_types addObject:@7];
    [_outputStrings addObject:@"05:00"];
    [_labels addObject:@"15 minute re-assess"];
    [_types addObject:@8];
    [_outputStrings addObject:@"15:00"];
    
    
    self.taskCategories = [[NSMutableArray alloc]init];
    self.currentCategory =[[NSIndexPath alloc]init];
...
    
}
#pragma mark - legal notice

-(void)splashScreen{
    UIAlertController * alert=   [UIAlertController
                                  alertControllerWithTitle:@"Legal Notice"
                                  message:@"Your use of this application constitutes your acceptance of the following conditions: You agree that this application is only an aid to the performance of your duties to a patient as a competent provider. You take complete responsibility for all patient care, including the recording of times according to your service's standards and the observance of all
                                  preferredStyle:UIAlertControllerStyleAlert];
    
    // if the user agrees, we query NSUserDefaults to find out whether the central administration enable switch is turned on. If so, we check the provider ID entered by the user against the list from central admin.
    
    UIAlertAction* ok = [UIAlertAction actionWithTitle:@"I agree to all of the above conditions." style:UIAlertActionStyleDefault
...
-(void)check5minuteReassess{
    
    //check whether the timer is running.  If not, start it.
    if(!self.assess5Timer){
    
    UIAlertController * alert=   [UIAlertController
                                  alertControllerWithTitle:@"5 minute re-assess?"
                                  message:@"Do you want to start a 5 minute patient re-assess?"
                                  preferredStyle:UIAlertControllerStyleAlert];
    
    UIAlertAction* ok = [UIAlertAction actionWithTitle:@"Yes" style:UIAlertActionStyleDefault
                                               handler:^(UIAlertAction * action) {
                                                   //Do Some action here
                                                   [self.assess15Timer invalidate];
                                                   NSDate *date =[NSDate date];
                                                   NSTimeInterval interval = 5*60;
                                                   self.reassess5 = [date dateByAddingTimeInterval:interval];
...
// start the 15 minute re-assess timer
-(void)check15minuteReassess{
    
    if(!self.assess15Timer)
    {
    UIAlertController * alert=   [UIAlertController
                                  alertControllerWithTitle:@"15 minute re-assess?"
                                  message:@"Do you want to start a 15 minute patient re-assess?"
                                  preferredStyle:UIAlertControllerStyleAlert];
    
    UIAlertAction* ok = [UIAlertAction actionWithTitle:@"Yes" style:UIAlertActionStyleDefault
                                               handler:^(UIAlertAction * action) {
                                                   [self.assess5Timer invalidate];
...
// Controll comes here when the Cancel button on the nav bar is touched.
- (IBAction)reset:(id)sender {

    
    
    UIAlertController * alert=   [UIAlertController
                                  alertControllerWithTitle:@"Finished with this patient?"
                                  message:@"Are you finished working with this patient? "
                                  preferredStyle:UIAlertControllerStyleAlert];
    
    UIAlertAction* ok = [UIAlertAction actionWithTitle:@"Yes" style:UIAlertActionStyleDefault
                                               handler:^(UIAlertAction * action) {
                                                   //Do Some action here
...
-(void)enterPatientData{
    
    // check for iCloud and Central Administration.
    [self refresh];
    
    UIAlertController * alert=   [UIAlertController
                                  alertControllerWithTitle:@"Enter Patient Data?"
                                  message:@"Do you want to enter patient data? CAUTION: see HIPAA regulations."
                                  preferredStyle:UIAlertControllerStyleAlert];
    UIAlertAction* ok = [UIAlertAction actionWithTitle:@"Yes" style:UIAlertActionStyleDefault
                                               handler:^(UIAlertAction * action) {
                                                  // self.SubscriptionIsActive = [self isSubscriptionActive];
                                                   self.providerID = [[NSUserDefaults standardUserDefaults]valueForKey:@"providerID"];
...
